<resources>
    <!--<string name="app_name">远程视频大数据管控系统</string>-->
    <!--<string name="app_name">江苏省宜兴市建筑综合监管平台</string>-->
    <string name="view_empty">没有数据~</string>
    <string name="view_loading">正在加载中~</string>


    <string name="tiltSensorItem1">序号</string>
    <string name="tiltSensorItem2">侦测点</string>
    <string name="tiltSensorItem3">生成时间</string>
    <string name="tiltSensorItem4">X轴角度</string>
    <string name="tiltSensorItem5">Y轴角度</string>
    <string name="tiltSensorItem6">激光距离</string>
    <string name="tiltSensorItem7">单次角度差</string>
    <string name="tiltSensorItem8">单次沉降+坐标位移</string>
    <string name="tiltSensorItem9">阶段角度差</string>
    <string name="tiltSensorItem10">阶段沉降+坐标位移</string>
    <string name="tiltSensorItem11">累计角度差</string>
    <string name="tiltSensorItem12">累计沉降+坐标位移</string>
    <string name="tiltSensorItem13">单次水平度浮动</string>
    <string name="tiltSensorItem14">阶段水平度浮动</string>
    <string name="tiltSensorItem15">累计水平度浮动</string>
    <string-array name="tiltSensorTitleName">
        <item>侦测点</item>
        <item>生成时间</item>
        <item>前后轴角度°</item>
        <item>左右轴角度°</item>
        <item>激光距离mm</item>
        <item>单次角度差°</item>
        <item>单次沉降+坐标位移\nmm</item>
        <item>阶段角度差°</item>
        <item>阶段沉降+坐标位移\nmm</item>
        <item>累计角度差°</item>
        <item>累计沉降+坐标位移\nmm</item>
        <item>水平度mm\n(左端,右端)</item>
        <item>水平度mm\n(左端,右端)</item>
        <item>水平度mm\n(左端,右端)</item>
    </string-array>

    <string-array name="selectItemSpData">
        <item>角度值</item>
        <item>单次角度差</item>
        <item>阶段角度差</item>
        <item>累计角度差</item>
        <item>单次沉降</item>
        <item>阶段沉降</item>
        <item>累计沉降</item>
        <item>水平度</item>
    </string-array>
    <string-array name="dipRealData">
        <item>前后轴角度°</item>
        <item>左右轴角度°</item>
        <item>激光距离</item>
        <item>前后轴单次角度差</item>
        <item>左右轴单次角度差</item>
        <item>前后轴累计角度差</item>
        <item>左右轴累计角度差</item>
        <item>单次沉降</item>
        <item>累计沉降</item>
        <item>当次空间位移</item>
        <item>累计空间位移</item>
        <item>左端单次水平度浮动</item>
        <item>右端单次水平度浮动</item>
        <item>左端累计水平度浮动</item>
        <item>右端累计水平度浮动</item>
    </string-array>
    <string-array name="dipRealDataUnit">
        <item>°</item>
        <item>°</item>
        <item>mm</item>
        <item>°</item>
        <item>°</item>
        <item>°</item>
        <item>°</item>
        <item>mm</item>
        <item>mm</item>
        <item>mm</item>
        <item>mm</item>
        <item>mm</item>
        <item>mm</item>
        <item>mm</item>
        <item>mm</item>
    </string-array>
    <string name="refreshTime">刷新间隔：</string>
    <string name="tempAlarm">手机端临时预警设置</string>
    <string name="LoadMoreFinal">已经加载全部！</string>
    <string name="LoadingMore">正在加载更多中！</string>
    <string name="empty_time">时间：-</string>

    <!-- 转场特效id标示 -->
    <string name="transitionNameBottomImg">bottomImg</string>
    <string name="transitionNameVerificationImg">verificationImg</string>
    <string name="transitionNameShowImg">showImg</string>
</resources>
