<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/id_head_view"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tiltSensorItem1"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="12sp"
                tools:text="@string/tiltSensorItem1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_move_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tiltSensorItem2"
                android:layout_width="@dimen/tiltSensorItemWidth"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="12sp"
                tools:text="@string/tiltSensorItem2" />

            <TextView
                android:id="@+id/tiltSensorItem3"
                android:layout_width="@dimen/tiltSensorItemTimeWidth"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="12sp"
                tools:text="@string/tiltSensorItem3" />

            <TextView
                android:id="@+id/tiltSensorItem4"
                android:layout_width="@dimen/tiltSensorItemSamllWidth"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="12sp"
                tools:text="@string/tiltSensorItem4" />

            <TextView
                android:id="@+id/tiltSensorItem5"
                android:layout_width="@dimen/tiltSensorItemSamllWidth"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="12sp"
                tools:text="@string/tiltSensorItem5" />

            <TextView
                android:id="@+id/tiltSensorItem6"
                android:layout_width="@dimen/tiltSensorItemSamllWidth"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="12sp"
                tools:text="@string/tiltSensorItem6" />

            <TextView
                android:id="@+id/tiltSensorItem7"
                android:layout_width="@dimen/tiltSensorItemWidth"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="12sp"
                tools:text="@string/tiltSensorItem7" />

            <TextView
                android:id="@+id/tiltSensorItem8"
                android:layout_width="@dimen/tiltSensorItemBigWidth"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="12sp"
                tools:text="@string/tiltSensorItem8" />

            <TextView
                android:id="@+id/tiltSensorItem9"
                android:layout_width="@dimen/tiltSensorItemWidth"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="12sp"
                tools:text="@string/tiltSensorItem9" />

            <TextView
                android:id="@+id/tiltSensorItem10"
                android:layout_width="@dimen/tiltSensorItemBigWidth"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="12sp"
                tools:text="@string/tiltSensorItem10" />

            <TextView
                android:id="@+id/tiltSensorItem11"
                android:layout_width="@dimen/tiltSensorItemWidth"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="12sp"
                tools:text="@string/tiltSensorItem11" />
            <TextView
                android:id="@+id/tiltSensorItem12"
                android:layout_width="@dimen/tiltSensorItemBigWidth"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="12sp"
                tools:text="@string/tiltSensorItem12" />
            <TextView
                android:id="@+id/tiltSensorItem13"
                android:layout_width="@dimen/tiltSensorItemTimeWidth"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="12sp"
                tools:text="@string/tiltSensorItem13" />
            <TextView
                android:id="@+id/tiltSensorItem14"
                android:layout_width="@dimen/tiltSensorItemTimeWidth"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="12sp"
                tools:text="@string/tiltSensorItem14" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/id_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentBottom="true" />
</RelativeLayout>